Teste de pasta providers

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Evertramos\\ElasticBase\\ElasticBaseServiceProvider"
+                "Evertramos\\ElasticBase\\App\\Providers\\ElasticBaseServiceProvider"
             ]
         }
     }
